# AI-Scientist-v2

./: .env.example  .gitignore  README.md  bfts_config.yaml  bfts_config_gemini.yaml  launch_scientist_bfts.py  llm.py  perform_ideation_temp_free.py  pyproject.toml  requirements.txt
ai_scientist/: llm.py  perform_icbinb_writeup.py  perform_ideation_temp_free.py  perform_writeup.py  vlm.py
ai_scientist/ideas/: automated_concept_sae_eval.json  automated_concept_sae_eval.py
ai_scientist/tools/: openalex.py
ai_scientist/treesearch/: agent_manager.py  interpreter.py  journal.py  log_summarization.py  perform_experiments_bfts_with_agentmanager.py
ai_scientist/treesearch/backend/: backend_openai.py  utils.py
ai_scientist/utils/: token_tracker.py
tests/: __init__.py  conftest.py  test_infrastructure.py
tests/integration/: __init__.py
tests/unit/: __init__.py
